--- a/src/main/Makefile
+++ b/src/main/Makefile
@@ -4,30 +4,43 @@ TARGET	=	../../bin/simple
 OBJS	=	main.o
 
 LDEPS	=	../../lib/libcommon.a \
-			../../lib/libscanner.a
+			../../lib/libscanner.a \
+			../../lib/libast.a \
+			../../lib/libparser.a
 
 SRCS	=	$(OBJS:.o=.c)
 
-DEBUG	=	-g
 CARGS	=	-Wall -Wextra
 LIBS	=	-lm
-INCS	=	-I../util -I../scanner
+INCS	=	-I../common -I../scanner -I../ast -I../parser
 CC		=	gcc
+
+ifeq ($(RELEASE), 1)
+	CARGS += -O3
+else
+	CARGS += -g
+endif
 
 .PHONY: clean all
 
 all: $(TARGET)
 
 $(TARGET): $(OBJS) $(LDEPS)
-	$(CC) $(DEBUG) $(CARGS) $(INCS) $(OBJS) -o $(TARGET) $(LDEPS)
+	$(CC) $(CARGS) $(INCS) $(OBJS) -o $(TARGET) $(LDEPS)
 
 .c.o:
-	$(CC) $(HSRC) $(CARGS) $(DEBUG) $(INCS) -c $< -o $@
+	$(CC) $(CARGS) $(INCS) -c $< -o $@
 
 ../lib/libutil.a:
 	make -C util
 
 ../lib/libscanner.a:
+	make -C scanner
+
+../lib/libast.a:
+	make -C scanner
+
+../lib/libparser.a:
 	make -C scanner
 
 clean:
