parsing classes is getting close to being done. next is token payloads.

--- a/src/Makefile
+++ b/src/Makefile
@@ -5,8 +5,10 @@ OBJS	=	token.o \
 			errors.o \
 			trace.o \
 			memory.o \
+			str_list.o \
+			ptr_list.o \
 			strings.o \
-			symbols.o \
+			abstract_tab.o \
 			scanner.o \
 			emit.o \
 			parser.o \
