--- a/src/scanner/test/CMakeLists.txt
+++ b/src/scanner/test/CMakeLists.txt
@@ -4,7 +4,7 @@ project(scanner_test)
 set(CMAKE_VERBOSE_MAKEFILE OFF)
 
 add_executable(${PROJECT_NAME}
-    main.c
+    scanner_test.c
 )
 
 target_link_libraries(${PROJECT_NAME}
@@ -29,3 +29,31 @@ target_compile_options(${PROJECT_NAME}
         $<$<CONFIG:RELEASE>:-Ofast >
         $<$<CONFIG:PROFILE>:-pg -O0 >
 )
+
+add_executable(queue_test
+    queue_test.c
+)
+
+target_link_libraries(queue_test
+    pthread
+    scanner
+    util
+    gc
+)
+
+target_compile_options(queue_test
+    PRIVATE
+        -Wall
+        -Wextra
+        -Wpedantic
+        -DUSE_GC
+        -I${PROJECT_SOURCE_DIR}/..
+        -I${PROJECT_SOURCE_DIR}/../../util
+        -I${PROJECT_SOURCE_DIR}/../../bdwgc/include
+        $<$<CONFIG:DEBUG>:-g >
+        $<$<CONFIG:DEBUG>:-DENABLE_LOGGER >
+        $<$<CONFIG:DEBUG>:-DENABLE_DUMP >
+        $<$<CONFIG:RELEASE>:-Ofast >
+        $<$<CONFIG:PROFILE>:-pg -O0 >
+)
+
