Work in progress on the parser.

--- a/src/simple/CMakeLists.txt
+++ b/src/simple/CMakeLists.txt
@@ -1,12 +1,18 @@
 cmake_minimum_required(VERSION 3.10)
-project(parser)
+project(simple)
 
 set(CMAKE_VERBOSE_MAKEFILE OFF)
 
-add_library(${PROJECT_NAME} STATIC
-    module.c
-    errors.c
-    ast.c
+add_executable(${PROJECT_NAME}
+    simple.c
+)
+
+target_link_libraries(${PROJECT_NAME}
+    pthread
+    scanner
+    parser
+    util
+    gc
 )
 
 target_compile_options(${PROJECT_NAME}
@@ -15,13 +21,14 @@ target_compile_options(${PROJECT_NAME}
         -Wextra
         -Wpedantic
         -DUSE_GC
+        -I${PROJECT_SOURCE_DIR}/..
         -I${PROJECT_SOURCE_DIR}/../util
+        -I${PROJECT_SOURCE_DIR}/../util/bdwgc/include
+        -I${PROJECT_SOURCE_DIR}/../parser
         -I${PROJECT_SOURCE_DIR}/../scanner
         $<$<CONFIG:DEBUG>:-g >
-        $<$<CONFIG:DEBUG>:-DMEMORY_DEBUG >
-        $<$<CONFIG:DEBUG>:-DENA_TRACE >
+        $<$<CONFIG:DEBUG>:-DENABLE_LOGGER >
+        $<$<CONFIG:DEBUG>:-DENABLE_DUMP >
         $<$<CONFIG:RELEASE>:-Ofast >
         $<$<CONFIG:PROFILE>:-pg -O0 >
 )
-
-#add_subdirectory(test)
