--- a/tests/scanner/scanner/CMakeLists.txt
+++ b/tests/scanner/scanner/CMakeLists.txt
@@ -1,15 +1,14 @@
 cmake_minimum_required(VERSION 3.10)
-project(parser_test)
+project(scanner_test)
 
 set(CMAKE_VERBOSE_MAKEFILE OFF)
 
 add_executable(${PROJECT_NAME}
-    parser_test.c
+    scanner_test.c
 )
 
 target_link_libraries(${PROJECT_NAME}
     pthread
-    parser
     scanner
     util
     gc
@@ -22,13 +21,14 @@ target_compile_options(${PROJECT_NAME}
         -Wpedantic
         -DUSE_GC
         -I${PROJECT_SOURCE_DIR}/..
-        -I${PROJECT_SOURCE_DIR}/../../src/util
-        -I${PROJECT_SOURCE_DIR}/../../src/util/bdwgc/include
-        -I${PROJECT_SOURCE_DIR}/../../src/parser
-        -I${PROJECT_SOURCE_DIR}/../../src/scanner
+        -I${PROJECT_SOURCE_DIR}/../../../src/util
+        -I${PROJECT_SOURCE_DIR}/../../../src/scanner
+        -I${PROJECT_SOURCE_DIR}/../../../src/parser
+        -I${PROJECT_SOURCE_DIR}/../../../src/bdwgc/include
         $<$<CONFIG:DEBUG>:-g >
         $<$<CONFIG:DEBUG>:-DENABLE_LOGGER >
         $<$<CONFIG:DEBUG>:-DUSE_TRACE >
         $<$<CONFIG:RELEASE>:-Ofast >
         $<$<CONFIG:PROFILE>:-pg -O0 >
 )
+
