--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,4 +2,5 @@ add_subdirectory(gc)
 add_subdirectory(util)
 add_subdirectory(scanner)
 add_subdirectory(parser)
+add_subdirectory(ast)
 add_subdirectory(simple)
