Getting rid of the hash table attributes.

--- a/src/parser/CMakeLists.txt
+++ b/src/parser/CMakeLists.txt
@@ -10,6 +10,7 @@ add_library(${PROJECT_NAME} STATIC
     errors.c
     expression.c
     data.c
+    namespace.c
 )
 
 target_compile_options(${PROJECT_NAME}
