--- a/test/parser/CMakeLists.txt
+++ b/test/parser/CMakeLists.txt
@@ -11,6 +11,7 @@ target_link_libraries(${PROJECT_NAME}
     pthread
     parser
     scanner
+    ast
     util
     gc
 )
@@ -26,6 +27,7 @@ target_compile_options(${PROJECT_NAME}
         -I${PROJECT_SOURCE_DIR}/../../src/util/bdwgc/include
         -I${PROJECT_SOURCE_DIR}/../../src/parser
         -I${PROJECT_SOURCE_DIR}/../../src/scanner
+        -I${PROJECT_SOURCE_DIR}/../../src/ast
         $<$<CONFIG:DEBUG>:-g >
         $<$<CONFIG:DEBUG>:-DENABLE_LOGGER >
         $<$<CONFIG:DEBUG>:-DUSE_TRACE >
