Intrim commit. Prelude to string and import mods.

--- a/src/parser/CMakeLists.txt
+++ b/src/parser/CMakeLists.txt
@@ -11,6 +11,7 @@ add_library(${PROJECT_NAME} STATIC
     expression.c
     data.c
     namespace.c
+    string.c
 )
 
 target_compile_options(${PROJECT_NAME}
