--- a/test/scanner/scanner/CMakeLists.txt
+++ b/test/scanner/scanner/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.10)
 project(scanner_test)
 
-set(CMAKE_VERBOSE_MAKEFILE OFF)
+#set(CMAKE_VERBOSE_MAKEFILE OFF)
 
 add_executable(${PROJECT_NAME}
     scanner_test.c
@@ -24,7 +24,8 @@ target_compile_options(${PROJECT_NAME}
         -I${PROJECT_SOURCE_DIR}/../../../src/util
         -I${PROJECT_SOURCE_DIR}/../../../src/scanner
         -I${PROJECT_SOURCE_DIR}/../../../src/parser
-        -I${PROJECT_SOURCE_DIR}/../../../src/bdwgc/include
+        -I${PROJECT_SOURCE_DIR}/../../../src/gc/include
+        -I${CMAKE_CURRENT_BINARY_DIR}/../../../src/scanner
         $<$<CONFIG:DEBUG>:-g >
         $<$<CONFIG:DEBUG>:-DENABLE_LOGGER >
         $<$<CONFIG:DEBUG>:-DUSE_TRACE >
