Name conflict with scan/scanner

--- a/src/parse/CMakeLists.txt
+++ b/src/parse/CMakeLists.txt
@@ -4,19 +4,19 @@ project(parse)
 #set(CMAKE_VERBOSE_MAKEFILE ON)
 
 add_library(${PROJECT_NAME} STATIC
-    parse.c  
-    strg.c  
+    parse.c
+    strg.c
     vars.c
-    compound.c      
-    except.c    
-    expr.c    
-    flow.c  
-    func_body.c  
-    func.c       
-    import.c  
-    list.c    
-    literals.c  
-    loop.c      
+    compound.c
+    except.c
+    expr.c
+    flow.c
+    func_body.c
+    func.c
+    import.c
+    list.c
+    literals.c
+    loop.c
     module.c
 )
 
@@ -27,11 +27,11 @@ target_compile_options(${PROJECT_NAME}
         -Wpedantic
         -DUSE_GC
         -I${PROJECT_SOURCE_DIR}/../util
-        -I${PROJECT_SOURCE_DIR}/../scan
+        -I${PROJECT_SOURCE_DIR}/../scanner
         -I${PROJECT_SOURCE_DIR}/../parse
         -I${PROJECT_SOURCE_DIR}/../ast
         -I${PROJECT_SOURCE_DIR}/../misc
-        -I${CMAKE_CURRENT_BINARY_DIR}/../scan
+        -I${CMAKE_CURRENT_BINARY_DIR}/../scanner
         $<$<CONFIG:DEBUG>:-g >
         $<$<CONFIG:DEBUG>:-DMEMORY_DEBUG >
         $<$<CONFIG:DEBUG>:-DUSE_TRACE >
