--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_subdirectory(gc)
 add_subdirectory(util)
-add_subdirectory(scan)
+add_subdirectory(scanner)
 add_subdirectory(parse)
 add_subdirectory(ast)
 add_subdirectory(simple)
