--- a/test/parse/CMakeLists.txt
+++ b/test/parse/CMakeLists.txt
@@ -25,9 +25,10 @@ target_compile_options(${PROJECT_NAME}
         -I${PROJECT_SOURCE_DIR}/..
         -I${PROJECT_SOURCE_DIR}/../../src/util
         -I${PROJECT_SOURCE_DIR}/../../src/util/gc/include
-        -I${PROJECT_SOURCE_DIR}/../../src/parser
+        -I${PROJECT_SOURCE_DIR}/../../src/parse
         -I${PROJECT_SOURCE_DIR}/../../src/scanner
         -I${PROJECT_SOURCE_DIR}/../../src/ast
+        -I${PROJECT_SOURCE_DIR}/../../src/misc
         -I${CMAKE_CURRENT_BINARY_DIR}/../../src/scanner
         $<$<CONFIG:DEBUG>:-g >
         $<$<CONFIG:DEBUG>:-DENABLE_LOGGER >
