Template the ast pass functionality.

--- a/src/ast/CMakeLists.txt
+++ b/src/ast/CMakeLists.txt
@@ -31,6 +31,7 @@ target_compile_options(${PROJECT_NAME}
         -I${PROJECT_SOURCE_DIR}/../parse
         -I${PROJECT_SOURCE_DIR}/../ast
         -I${PROJECT_SOURCE_DIR}/../misc
+        -I${PROJECT_SOURCE_DIR}/../pass
         -I${CMAKE_CURRENT_BINARY_DIR}/../scanner
         $<$<CONFIG:DEBUG>:-g >
         $<$<CONFIG:DEBUG>:-DMEMORY_DEBUG >
