--- a/src/simple/CMakeLists.txt
+++ b/src/simple/CMakeLists.txt
@@ -12,6 +12,7 @@ target_link_libraries(${PROJECT_NAME}
     parse
     scan
     ast
+    pass
     util
     gc
 )
@@ -28,6 +29,7 @@ target_compile_options(${PROJECT_NAME}
         -I${PROJECT_SOURCE_DIR}/../parse
         -I${PROJECT_SOURCE_DIR}/../scanner
         -I${PROJECT_SOURCE_DIR}/../ast
+        -I${PROJECT_SOURCE_DIR}/../pass
         -I${PROJECT_SOURCE_DIR}/../misc
         -I${CMAKE_CURRENT_BINARY_DIR}/../scanner
         $<$<CONFIG:DEBUG>:-g >
