--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,5 +2,6 @@ add_subdirectory(gc)
 add_subdirectory(util)
 add_subdirectory(scanner)
 add_subdirectory(parse)
+add_subdirectory(pass)
 add_subdirectory(ast)
 add_subdirectory(simple)
