Implementing parser and AST rules.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "util.h": "c",
-        "pass.h": "c"
+        "pass.h": "c",
+        "scanner.h": "c"
     }
 }
