Shunting yard implemented.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "util.h": "c",
         "pass.h": "c",
-        "scanner.h": "c"
+        "scanner.h": "c",
+        "hash_map": "c"
     }
 }
