--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,13 +6,21 @@
         "hash_map": "c"
     },
     "cSpell.words": [
+        "CCBRACE",
+        "CPAREN",
+        "CPBRACE",
+        "crnt",
         "doxygen",
         "dquote",
         "DSTR",
         "DSTRG",
         "graphiz",
         "longjmp",
+        "NEQU",
+        "OPAREN",
+        "OPBRACE",
         "parens",
+        "RETV",
         "squote",
         "SSTR",
         "SSTRG",
