Implement the lists

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "CPAREN",
         "CPBRACE",
         "crnt",
+        "CSBRACE",
         "doxygen",
         "dquote",
         "DSTR",
@@ -19,6 +20,7 @@
         "NEQU",
         "OPAREN",
         "OPBRACE",
+        "OSBRACE",
         "parens",
         "RETV",
         "squote",
