Moved the Util stuff int Misc. Clean ups.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,24 +7,36 @@
         "string_view": "c"
     },
     "cSpell.words": [
+        "AMPER",
         "assignement",
         "blart",
+        "cbod",
         "CCBRACE",
+        "ccla",
         "CPAREN",
         "CPBRACE",
         "crnt",
         "CSBRACE",
+        "defc",
+        "DMEMORY",
         "doxygen",
         "dquote",
         "DSTR",
         "DSTRG",
+        "dvalue",
+        "ecla",
+        "eclaus",
+        "elst",
+        "fbod",
         "fdup",
         "graphiz",
         "LLFOR",
         "longjmp",
+        "lstr",
         "NEQU",
         "ntok",
         "OCBRACE",
+        "Ofast",
         "OPAREN",
         "OPBRACE",
         "OSBRACE",
@@ -34,7 +46,12 @@
         "squote",
         "SSTR",
         "SSTRG",
+        "sstrings",
+        "stdbool",
         "strg",
-        "tqueue"
+        "symb",
+        "tqueue",
+        "Wextra",
+        "Wpedantic"
     ]
 }
