Imports are partially working

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,9 +29,11 @@
         "elst",
         "fbod",
         "fdup",
+        "fstr",
         "graphiz",
         "LLFOR",
         "longjmp",
+        "lptr",
         "lstr",
         "NEQU",
         "ntok",
@@ -41,6 +43,7 @@
         "OPBRACE",
         "OSBRACE",
         "parens",
+        "pidx",
         "RETV",
         "sptr",
         "squote",
