--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,5 +3,5 @@ add_subdirectory(scanner)
 add_subdirectory(parse)
 add_subdirectory(pass)
 add_subdirectory(ast)
-add_subdirectory(misc)
+add_subdirectory(common)
 add_subdirectory(kata)
