--- a/src/parse/CMakeLists.txt
+++ b/src/parse/CMakeLists.txt
@@ -11,7 +11,6 @@ add_library(${PROJECT_NAME} STATIC
     compound.c
     except.c
     expr.c
-    expression.c
     flow.c
     func_body.c
     func.c
@@ -33,7 +32,7 @@ target_compile_options(${PROJECT_NAME}
         -I${PROJECT_SOURCE_DIR}/../parse
         -I${PROJECT_SOURCE_DIR}/../ast
         -I${PROJECT_SOURCE_DIR}/../pass
-        -I${PROJECT_SOURCE_DIR}/../misc
+        -I${PROJECT_SOURCE_DIR}/../common
         -I${CMAKE_CURRENT_BINARY_DIR}/../scanner
         $<$<CONFIG:DEBUG>:-g >
         $<$<CONFIG:DEBUG>:-DMEMORY_DEBUG >
