--- a/src/pass/CMakeLists.txt
+++ b/src/pass/CMakeLists.txt
@@ -18,7 +18,7 @@ target_compile_options(${PROJECT_NAME}
         -I${PROJECT_SOURCE_DIR}/../parse
         -I${PROJECT_SOURCE_DIR}/../ast
         -I${PROJECT_SOURCE_DIR}/../pass
-        -I${PROJECT_SOURCE_DIR}/../misc
+        -I${PROJECT_SOURCE_DIR}/../common
         -I${CMAKE_CURRENT_BINARY_DIR}/../scanner
         $<$<CONFIG:DEBUG>:-g >
         $<$<CONFIG:DEBUG>:-DMEMORY_DEBUG >
