--- a/src/ast/CMakeLists.txt
+++ b/src/ast/CMakeLists.txt
@@ -32,7 +32,8 @@ target_compile_options(${PROJECT_NAME}
         -I${PROJECT_SOURCE_DIR}/../ast
         -I${PROJECT_SOURCE_DIR}/../common
         -I${PROJECT_SOURCE_DIR}/../pass
-        -I${CMAKE_CURRENT_BINARY_DIR}/../scanner
+        -I${CMAKE_CURRENT_BINARY_DIR}/../tokens
+        -I${CMAKE_CURRENT_BINARY_DIR}
         $<$<CONFIG:DEBUG>:-g >
         $<$<CONFIG:DEBUG>:-DMEMORY_DEBUG >
         $<$<CONFIG:DEBUG>:-DUSE_TRACE >
