--- a/src/kata/CMakeLists.txt
+++ b/src/kata/CMakeLists.txt
@@ -11,6 +11,7 @@ add_executable(${PROJECT_NAME}
 target_link_libraries(${PROJECT_NAME}
     pthread
     parse
+    tokens
     scan
     ast
     pass
@@ -32,7 +33,8 @@ target_compile_options(${PROJECT_NAME}
         -I${PROJECT_SOURCE_DIR}/../ast
         -I${PROJECT_SOURCE_DIR}/../pass
         -I${PROJECT_SOURCE_DIR}/../common
-        -I${CMAKE_CURRENT_BINARY_DIR}/../scanner
+        -I${CMAKE_CURRENT_BINARY_DIR}/../tokens
+        -I${CMAKE_CURRENT_BINARY_DIR}
         $<$<CONFIG:DEBUG>:-g >
         $<$<CONFIG:DEBUG>:-DENABLE_LOGGER >
         $<$<CONFIG:DEBUG>:-DUSE_TRACE >
