--- a/src/scanner/CMakeLists.txt
+++ b/src/scanner/CMakeLists.txt
@@ -7,7 +7,6 @@ add_library(${PROJECT_NAME} STATIC
     scanner.c
     tok_queue.c
     fileio.c
-    tokens.c
 )
 
 target_compile_options(${PROJECT_NAME}
@@ -24,6 +23,7 @@ target_compile_options(${PROJECT_NAME}
         -I${PROJECT_SOURCE_DIR}/../pass
         -I${PROJECT_SOURCE_DIR}/../parse
         -I${PROJECT_SOURCE_DIR}/../gc/include
+        -I${CMAKE_CURRENT_BINARY_DIR}/../tokens
         -I${CMAKE_CURRENT_BINARY_DIR}
         $<$<CONFIG:DEBUG>:-g >
         $<$<CONFIG:DEBUG>:-DMEMORY_DEBUG >
@@ -34,10 +34,10 @@ target_compile_options(${PROJECT_NAME}
 
 #include_directories(${CMAKE_CURRENT_BINARY_DIR} ./)
 
-add_custom_command(
-    OUTPUT tokens.c tokens.h
-    COMMENT "Make a sorted list of the tokens and associated infrastructure."
-    COMMAND python ${PROJECT_SOURCE_DIR}/mk_tokens.py ${PROJECT_SOURCE_DIR}/keywords.txt
-    #SOURCES keywords.txt
-    DEPENDS mk_tokens.py keywords.txt
-)
+# add_custom_command(
+#     OUTPUT tokens.c tokens.h
+#     COMMENT "Make a sorted list of the tokens and associated infrastructure."
+#     COMMAND python ${PROJECT_SOURCE_DIR}/mk_tokens.py ${PROJECT_SOURCE_DIR}/keywords.txt
+#     #SOURCES keywords.txt
+#     DEPENDS mk_tokens.py keywords.txt
+# )
