Use templates for the tokens source code.

--- a/src/tokens/CMakeLists.txt
+++ b/src/tokens/CMakeLists.txt
@@ -35,7 +35,10 @@ target_compile_options(${PROJECT_NAME}
 add_custom_command(
     OUTPUT tokens.c tokens.h
     COMMENT "Make a sorted list of the tokens and associated infrastructure."
-    COMMAND python ${PROJECT_SOURCE_DIR}/mk_tokens.py ${PROJECT_SOURCE_DIR}/keywords.txt
+    COMMAND python ${PROJECT_SOURCE_DIR}/mk_tokens.py 
+                    ${PROJECT_SOURCE_DIR}/keywords.txt 
+                    ${PROJECT_SOURCE_DIR}/tokens.h.template 
+                    ${PROJECT_SOURCE_DIR}/tokens.c.template
     #SOURCES keywords.txt
-    DEPENDS mk_tokens.py keywords.txt
+    DEPENDS mk_tokens.py keywords.txt tokens.c.template tokens.h.template
 )
