Improve error handling to skip silly errors.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -59,5 +59,8 @@
         "Weiser",
         "Wextra"
     ],
-    "cmake.configureOnOpen": false
+    "cmake.configureOnOpen": false,
+    "files.associations": {
+        "exception.h": "c"
+    }
 }
