--- a/src/pass/CMakeLists.txt
+++ b/src/pass/CMakeLists.txt
@@ -19,6 +19,7 @@ target_compile_options(${PROJECT_NAME}
         -I${PROJECT_SOURCE_DIR}/../ast
         -I${PROJECT_SOURCE_DIR}/../pass
         -I${PROJECT_SOURCE_DIR}/../common
+        -I${PROJECT_SOURCE_DIR}/../symbols
         -I${CMAKE_CURRENT_BINARY_DIR}/../tokens
         $<$<CONFIG:DEBUG>:-g >
         $<$<CONFIG:DEBUG>:-DMEMORY_DEBUG >
