--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.5)
-project(simple_compiler)
+project(kata_compiler)
 
 set(CMAKE_VERBOSE_MAKEFILE OFF)
 #set(CMAKE_BUILD_TYPE release)
@@ -8,7 +8,7 @@ set(CMAKE_VERBOSE_MAKEFILE OFF)
 #set(CMAKE_C_COMPILER /usr/bin/gcc)
 #set(CMAKE_CXX_COMPILER /usr/bin/g++)
 
-set(CMAKE_BUILD_TYPE debug)
+#set(CMAKE_BUILD_TYPE debug)
 
 set(LIBRARY_OUTPUT_PATH "${PROJECT_SOURCE_DIR}/bin")
 set(EXECUTABLE_OUTPUT_PATH "${PROJECT_SOURCE_DIR}/bin")
