--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.10)
 project(common)
 
-set(CMAKE_VERBOSE_MAKEFILE OFF)
+include(${PROJECT_SOURCE_DIR}/../../BuildOpts.txt)
 
 add_library(${PROJECT_NAME} STATIC
     errors.c
@@ -13,26 +13,5 @@ add_library(${PROJECT_NAME} STATIC
     exception.c
 )
 
-target_compile_options(${PROJECT_NAME}
-    PRIVATE
-        -Wall
-        -Wextra
-        -Wpedantic
-        -DUSE_GC
-        -I${PROJECT_SOURCE_DIR}/../gc/include
-        -I${PROJECT_SOURCE_DIR}/../util
-        -I${PROJECT_SOURCE_DIR}/../scanner
-        -I${PROJECT_SOURCE_DIR}/../parse
-        -I${PROJECT_SOURCE_DIR}/../ast
-        -I${PROJECT_SOURCE_DIR}/../pass
-        -I${PROJECT_SOURCE_DIR}/../symbols
-        -I${PROJECT_SOURCE_DIR}
-        -I${CMAKE_CURRENT_BINARY_DIR}/../tokens
-        -I${CMAKE_CURRENT_BINARY_DIR}
-        $<$<CONFIG:DEBUG>:-g >
-        $<$<CONFIG:DEBUG>:-DMEMORY_DEBUG >
-        $<$<CONFIG:DEBUG>:-DUSE_TRACE >
-        $<$<CONFIG:RELEASE>:-Ofast >
-        $<$<CONFIG:PROFILE>:-pg -O0 >
-)
+
 
