Move the hash function to the common directory.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,6 +36,8 @@
         "ntok",
         "OCBRACE",
         "Ofast",
+        "oldcap",
+        "oldtab",
         "oname",
         "OPAREN",
         "OPBRACE",
