Fix it so that it builds with clang

--- a/src/parse/CMakeLists.txt
+++ b/src/parse/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.10)
 project(parse)
 
 #set(CMAKE_VERBOSE_MAKEFILE ON)
+include(${PROJECT_SOURCE_DIR}/../../BuildOpts.txt)
 
 add_library(${PROJECT_NAME} STATIC
     parse.c
@@ -21,25 +22,4 @@ add_library(${PROJECT_NAME} STATIC
     module.c
 )
 
-target_compile_options(${PROJECT_NAME}
-    PRIVATE
-        -Wall
-        -Wextra
-        -Wpedantic
-        -DUSE_GC
-        -I${PROJECT_SOURCE_DIR}/../util
-        -I${PROJECT_SOURCE_DIR}/../scanner
-        -I${PROJECT_SOURCE_DIR}/../parse
-        -I${PROJECT_SOURCE_DIR}/../ast
-        -I${PROJECT_SOURCE_DIR}/../pass
-        -I${PROJECT_SOURCE_DIR}/../common
-        -I${PROJECT_SOURCE_DIR}/../symbols
-        -I${CMAKE_CURRENT_BINARY_DIR}/../tokens
-        -I${CMAKE_CURRENT_BINARY_DIR}
-        $<$<CONFIG:DEBUG>:-g >
-        $<$<CONFIG:DEBUG>:-DMEMORY_DEBUG >
-        $<$<CONFIG:DEBUG>:-DUSE_TRACE >
-        $<$<CONFIG:RELEASE>:-Ofast >
-        $<$<CONFIG:PROFILE>:-pg -O0 >
-)
 
